[metadata]
name = yacana_tools
version = 0.2.0
author = Yohann Chastre
author_email = yohann.chastre@gmail.com
description = Tools for Yacana, a task-driven multi-agent framework giving you the building blocks to create anything you wish with LLMs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ychastre.github.io/yacana_tools/
project_urls =
    Github = https://github.com/ychastre/yacana_tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    yacana >= 0.4.0

[options.packages.find]
where = src